# Algorithm_etc

./: .gitignore  8_kyu_Remove_exclamation_marks.py  Atcoder_suite_test.go  README.md  debug_test_zsh.ts  go.mod  go.sum  package-lock.json  package.json  paiza3_python.py  paiza3_python.pyproj  reg_replace.py  test.html  test.js  tsconfig.json  途中_6_kyu_Checkerboard_Resolution.py
AOJ/: ALDS1_1_A_挿入ソート.py  ALDS1_1_B_最大公約数.py  ALDS1_1_C_素数.py  ALDS1_1_D_最大の利益.py  ALDS1_2_A_バブルソート.py  ALDS1_2_B_選択ソート.py  ALDS1_2_C_安定なソート.py  ALDS1_2_D_ShellSort.py  ALDS1_3_A_スタック.py  ALDS1_3_B_キュー.py  ALDS1_3_C_双方向連結リスト.py  ALDS1_3_D_Areas on the Cross-Section Diagram.py  ALDS1_3_D_Areas on the Cross-Section Diagram.ts  ALDS1_3_D_Areas on the Cross-Section Diagram_.js  ALDS1_3_D_Areas_on_the_Cross-Section_Diagram.py  ALDS1_4_A_線形探索.py  ALDS1_4_A_線形探索.ts  ALDS1_4_B_二分探索.py  ALDS1_4_B_二分探索.ts  ALDS1_4_C_Dictionary.ts  ALDS1_4_C_辞書.py  ALDS1_4_D_割り当て.py  ALDS1_4_D_割り当て.ts  ALDS1_4_D_割り当て_copy.py  ALDS1_4_D_割り当てjs.js  ALDS1_5_A_総当たり.py  ALDS1_5_B_マージソート copy.py  ALDS1_5_B_マージソート.py  ALDS1_5_C_コッホ曲線.py  ALDS1_5_D_反転数.py  ALDS1_5_D_反転数_copy.py  ALDS1_6_A_計数ソート.py  ALDS1_6_B_Partition.cpp  ALDS1_6_B_Partition.py  ALDS1_6_C_クイックソート.cpp  ALDS1_6_C_クイックソート.py  ITP1_10_A_Distance.py  ITP1_10_B_Triangle.py  ITP1_10_C_StandardDeviation.py  ITP1_10_D_DistanceII.py  (+21 more)
AlgorithmAndDataStructure/: ALDS1_1_A_InsertionSort.py  ALDS1_2_A_BubbleSort.py  ALDS1_2_B_SelectionSort.py  ALDS1_2_C_StableSort.py  (+2 more)
rust_study/projects/error_study/: Cargo.toml
rust_study/projects/error_study/src/: main.rs
(+569 files in other folders)
