[package]
name = "error_study"
version = "0.1.0"
authors = ["applego <applegorillappa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# ↓を追記するとリリースモード時のパニック時に異常終了するようになる（巻き戻ししない？）
# [profile.release]
# panic = 'abort'
